<resources>
    <string name="app_name">CineRec</string>
    <string name="openDrawer">Abrir menú</string>
    <string name="closeDrawer">Cerrar menú</string>

    <!--main activity-->
    <string name="Btn_login">Login</string>
    <string name="Btn_registro">Registro</string>

    <!--registro activity-->

    <string name="CrearCuenta">Crear una cuenta</string>
    <string name="Nombre">Nombres</string>
    <string name="Correo">Correo electrónico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="ConfirmarContraseña">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="Tengounacuenta">Tengo una cuenta</string>

    <!--menu activity-->
    <string name="Vaciar_Todas_Pelis">Vaciar todas las notas</string>
    <string name="Perfil_usuario">Perfil del Usuario</string>


    <!--menu principal-->
    <string name="BienvenidoPrincipal">Bienvenido/a, </string>
    <string name="NombresPrincipal"> -- </string>
    <string name="UidPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>
    <string name="EstadoCuentaPrincipal"> No verificado </string>


    <string name="AgregarPeli"> Añadir </string>
    <string name="Archivados">Favoritas</string>
    <string name="Contactos">Contactos</string>
    <string name="AcercaDe">Acerca de</string>


    <string name="ListarPeli">Mis películas</string>
    <string name="CerrarSesin">Salir</string>

    <!--agregar nota-->
    <string name="Uid_Usuario">Uid del Usuario</string>
    <string name="Correo_Usuario">Correo de usuario </string>
    <string name="fecha_hora"> Fecha y hora actual </string>
    <string name="fecha_hora_txt"> Fecha de registro </string>
    <string name="Titulo"> Titulo </string>
    <string name="Descripcion"> Descripcion </string>
    <string name="btn_calendario"> Calendario </string>
    <string name="Fecha"> 00/00/0000 </string>
    <string name="Estado"> Pendiente </string>


    <!--item nota-->
    <string name="id_peli_item">Id peli</string>
    <string name="Uid_Usuario_item">Uid del Usuario</string>
    <string name="Correo_Usuario_item">Correo de usuario </string>
    <string name="fecha_hora_registro_item"> Fecha y hora registro </string>
    <string name="Titulo_item"> Titulo </string>
    <string name="Descripcion_item"> Descripcion </string>
    <string name="Fecha_item"> 00/00/0000 </string>
    <string name="Estado_item"> Pendiente </string>

    <!--peli importante-->
    <string name="id_peli_item_I">Id peli</string>
    <string name="Uid_Usuario_item_I">Uid del Usuario</string>
    <string name="Correo_Usuario_item_I">Correo de usuario </string>
    <string name="fecha_hora_registro_item_I"> Fecha y hora registro </string>
    <string name="Titulo_item_I"> Titulo </string>
    <string name="Descripcion_item_I"> Descripcion </string>
    <string name="Fecha_item_I"> 00/00/0000 </string>
    <string name="Estado_item_I"> Pendiente </string>

    <!--item contacto-->
    <string name="id_contacto_item">Id contacto</string>
    <string name="Uid_contacto_item">Uid usuario</string>
    <string name="nombre_contacto_item">Nombre</string>
    <string name="apellidos_contacto_item">Apellidos</string>
    <string name="correo_contacto_item">Correo</string>
    <string name="telefono_contacto_item">Telefono</string>
    <string name="edad_contacto_item">Edad</string>
    <string name="direccion_contacto_item">Direccion</string>


    <!--cuadro de dialogo-->
    <string name="EligeOpcion">Elige una opción</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Actualizar">Actualizar</string>

    <!--cuadro de dialogo cuenta verificada-->
    <string name="CuentaVerificadaTxt">Cuenta Verificada</string>
    <string name="EntendidoVerificado">Entendido</string>

    <!--cuadro de dialogo - eliminar nota importante-->
    <string name="EliminarPeliImportanteTxt">¿Estas seguro de eliminar la pelicula favorita de la lista?</string>
    <string name="EliminarPeliImportante">Eliminar</string>
    <string name="CancelarPeliImportante">Cancelar</string>

    <!--cuadro de dialogo - filtrar-->
    <string name="FiltroTXT">Filtrar peliculas: </string>
    <string name="Todas_Peliculas">Todas</string>
    <string name="Peliculas_vistas">Vistas</string>
    <string name="Peliculas_pendientes">Pendientes</string>


    <!--cuadro de dialogo - country code picker-->
    <string name="Establecer_Telefono">Escribe tu teléfono</string>
    <string name="Btn_Aceptar_tlf">Aceptar</string>

    <!--cuadro de dialogo - elegir imagen de-->
    <string name="ElegirImagenTXT">Elegir imagen de:</string>
    <string name="Btn_Elegir_galeria">Galería</string>
    <string name="Btn_Elegir_camara">Cámara</string>

    <!--cuadro de dialogo - registro contacto-->
    <string name="ValidarTXT">Tienes que completar al menos el nombre del contacto</string>
    <string name="Btn_Validar_Registro_C">OK</string>


    <!--actualizar nota-->
    <string name="Id_peli_A">Id peli</string>
    <string name="Uid_Usuario_A">Uid del Usuario</string>
    <string name="Correo_Usuario_A">Correo de usuario </string>
    <string name="Fecha_registro_A"> Fecha de registro </string>
    <string name="Titulo_A"> Titulo </string>
    <string name="Descripcion_A"> Descripcion </string>
    <string name="btn_calendario_A"> Calendario </string>
    <string name="Fecha_A"> 00/00/0000 </string>
    <string name="Estado_A"> Pendiente </string>
    <string name="Estado_Nuevo"> -- </string>

    <!---SPINNER-->
    <string-array name="Estados_peli">
        <item>"Pendiente"</item>
        <item>"Visto"</item>
    </string-array>

    <!---DETALLE NOTA-->
    <string name="Id_peli_detalle_txt">Id de la pelicula:</string>
    <string name="Id_peli_detalle">Id pelicula</string>

    <string name="Uid_usuario_detalle_txt">Uid de usuario:</string>
    <string name="Uid_usuario_detalle">Uid Usuario</string>

    <string name="Correo_usuario_detalle_txt">Correo de usuario:</string>
    <string name="Correo_usuario_detalle">Correo usuario</string>

    <string name="Titulo_Detalle_txt"> Titulo: </string>
    <string name="Titulo_Detalle"> Titulo </string>

    <string name="Descripcion_Detalle_txt"> Descripcion: </string>
    <string name="Descripcion_Detalle"> Descripcion </string>

    <string name="Fecha_registro_Detalle_txt"> Fecha de registro: </string>
    <string name="Fecha_registro_Detalle"> Fecha registro </string>

    <string name="Fecha_peli_Detalle_txt"> Fecha pelicula: </string>
    <string name="Fecha_peli_Detalle"> Fecha pelicula </string>

    <string name="Estado_Detalle_txt"> Estado de la nota: </string>
    <string name="Estado_Detalle"> Estado </string>

    <string name="Boton_Importante"> FAVORITA </string>


    <!--perfil usuario-->
    <string name="Uid_Perfil">Uid</string>
    <string name="Nombres_Perfil">Nombres</string>
    <string name="Apellidos_Perfil">Apellidos</string>
    <string name="Correo_Perfil">Correo</string>
    <string name="Edad_Perfil">Edad</string>
    <string name="Telefono_Perfil">Telefono</string>
    <string name="Direccion_Perfil">Direccion</string>
    <string name="Estudios_Perfil">Estudios</string>
    <string name="Profesion_Perfil">Profesion</string>
    <string name="Fecha_Nacimiento_Perfil">Fecha de nac.</string>

    <string name="Guardar_Datos">Guardar Datos</string>

    <!--perfil usuario- editar imagen-->
    <string name="BtnElegirImagen">Elegir imagen de</string>
    <string name="BtnActualizarImagen">Actualizar imagen</string>

    <!--agregar contacto-->
    <string name="Uid_UsuarioC">Mi uid</string>
    <string name="Nombre_Contacto">Nombre contacto</string>
    <string name="Apellidos_Contacto">Apellidos contacto</string>
    <string name="Correo_Contacto">Correo contacto</string>
    <string name="Edad_Contacto">Edad</string>
    <string name="Telefono_Contacto">Telefono </string>
    <string name="Direccion_Contacto">Direccion </string>
    <string name="Btn_Guardar_Contacto">Guardar contacto</string>

    <!--detalle contacto-->
    <string name="Id_Usuario_D">Id</string>
    <string name="Uid_Usuario_D">Uid usuario</string>
    <string name="Nombre_Contacto_D">Nombre </string>
    <string name="Apellidos_Contacto_D">Apellidos </string>
    <string name="Correo_Contacto_D">Correo</string>
    <string name="Edad_Contacto_D">Edad</string>
    <string name="Telefono_Contacto_D">Telefono </string>
    <string name="Direccion_Contacto_D">Direccion </string>
    <string name="Btn_Guardar_Contacto_D">Actualizar</string>

    <!-- En res/values/strings.xml -->
    <string name="texto_con_subrayado"><u>Información del contacto</u></string>

    <!--cuadro de dialogo - opciones contacto-->
    <string name="ElegirOpcionesContactoTXT">Elige una opción para el contacto:</string>
    <string name="Btn_Eliminar">Eliminar</string>
    <string name="Btn_Actualizar">Actualizar</string>

    <!--actualizar contacto-->
    <string name="Id_Contacto_A">**** </string>
    <string name="Uid_Contacto_A">**** </string>
    <string name="Nombre_Contacto_A">**** </string>
    <string name="Apellidos_Contacto_A">**** </string>
    <string name="Edad_Contacto_A"> **** </string>
    <string name="Direccion_Contacto_A">**** </string>
    <string name="Correo_Contacto_A">****  </string>
    <string name="Telefono_Contacto_A">**** </string>
    <string name="Guardar_Datos_Contacto">Guardar contacto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>