<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AgregarPeli.Agregar_Peli">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <include layout="@layout/custom_toolbar2"/>

        <TextView
            android:id="@+id/Uid_Usuario"
            android:hint="@string/Uid_Usuario"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Correo_Usuario"
            android:hint="@string/Correo_Usuario"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:fontFamily="@font/quicksand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/fecha_hora"
            android:hint="@string/fecha_hora"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:fontFamily="@font/quicksand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/Titulo"
            android:layout_marginTop="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Titulo"
            android:fontFamily="@font/quicksand"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/Descripcion"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Descripcion"
            android:fontFamily="@font/quicksand"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!--ABRIR CALENDARIO-->

        <Button
            android:id="@+id/Btn_Calendario"
            android:text="@string/btn_calendario"
            android:fontFamily="@font/quicksand"
            app:icon="@drawable/baseline_calendar_today_24"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"/>

            <!--VISUALIZAR CALENDARIO-->
        <TextView
            android:id="@+id/Fecha"
            android:fontFamily="@font/quicksand"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="55dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Fecha"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/Estado"
            android:textStyle="bold"
            android:textSize="20sp"
            android:hint="@string/Estado"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="120dp"
            android:fontFamily="@font/quicksand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
