<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <!--Imagen de contacto-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Imagen_contacto_Item"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/usuario" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <!--Id de contacto-->
            <TextView
                android:id="@+id/id_contacto_item"
                android:text="@string/id_contacto_item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/quicksand"/>

            <!--Uid del usuario-->
            <TextView
                android:id="@+id/uid_contacto_item"
                android:text="@string/Uid_contacto_item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/quicksand"/>

            <!--Nombres de contacto-->
            <TextView
                android:id="@+id/nombre_contacto_item"
                android:text="@string/nombre_contacto_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:fontFamily="@font/quicksand"/>

            <!--Apellidos de contacto-->
            <TextView
                android:id="@+id/apellidos_contacto_item"
                android:text="@string/apellidos_contacto_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:fontFamily="@font/quicksand"/>

            <!--Correo de contacto-->
            <TextView
                android:id="@+id/correo_contacto_item"
                android:text="@string/correo_contacto_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:gravity="center"
                android:fontFamily="@font/quicksand"/>

            <!--Teléfono de contacto-->
            <TextView
                android:id="@+id/telefono_contacto_item"
                android:text="@string/telefono_contacto_item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/quicksand"/>

            <!--Edad de contacto-->
            <TextView
                android:id="@+id/edad_contacto_item"
                android:text="@string/edad_contacto_item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/quicksand"/>

            <!--Dirección del contacto-->
            <TextView
                android:id="@+id/direccion_contacto_item"
                android:text="@string/direccion_contacto_item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/quicksand"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>