<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil.Perfil_Usuario"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Contiene la portada e imagen de perfil-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/fondoperfil" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imagen_perfil"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="#EF9A9A"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="250dp"
                android:src="@drawable/perfilmenu"/>
        </RelativeLayout>

        <!--Datos del usuario-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Correo_Perfil"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/quicksand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Correo_Perfil"/>
            <TextView
                android:id="@+id/Uid_Perfil"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Uid_Perfil"/>

            <EditText
                android:id="@+id/Nombres_Perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand"
                android:hint="@string/Nombres_Perfil"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/Apellidos_Perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand"
                android:hint="@string/Apellidos_Perfil"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/Edad_Perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand"
                android:hint="@string/Edad_Perfil"
                android:inputType="number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/Direccion_Perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand"
                android:hint="@string/Direccion_Perfil"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/Estudios_Perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand"
                android:hint="@string/Estudios_Perfil"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/Profesion_Perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand"
                android:hint="@string/Profesion_Perfil"
                android:inputType="text"
                android:minHeight="48dp" />
            
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/Telefono_Perfil"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/quicksand"
                    android:hint="@string/Telefono_Perfil"
                    android:textSize="18sp"
                    android:minHeight="48dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/EditarTelefono"
                    android:layout_marginStart="5dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="21dp"
                    android:src="@drawable/telefono"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


            <Button
                android:backgroundTint="@color/amarillo"
                android:id="@+id/Guardar_Datos"
                android:fontFamily="@font/quicksand"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/Guardar_Datos"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>